[package]
name = "and_2_cc"
version = "0.1.0"
authors = ["Jonathan Shi <jhshi@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nrf52832-pac = "0.9.0"
# alloc-cortex-m = "0.4.0"

[dependencies.cortex-m-rt]
version = "0.6.10"
default-features = false
features = []

# this lets you use `cargo fix`!
[[bin]]
name = "and_2_cc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
