[package]
name = "and_2_cc"
version = "0.1.0"
authors = ["Jonathan Shi <jhshi@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
nrf52832-hal = { version = "0.11.0", features = ["rt"] }
# alloc-cortex-m = "0.4.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

# this lets you use `cargo fix`!
[[bin]]
name = "and_2_cc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
