[package]
name = "ddd"
version = "0.1.0"
authors = ["Jonathan Shi <jhshi@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
nrf52832-hal = { version = "0.12.0", features = ["rt"] }
lsm9ds1 = "0.1.0"
arrayvec = { version = "0.5.2", default-features = false, features = [] }
cortex-m-rtic = "0.5.5"
bitflags = "1.2.1"
# Build this from git since the crates version is kinda old
# Additionally, some extra stuff changes were needed to allow processing of writes
rubble = { git = "https://github.com/noloerino/rubble" }
# alloc-cortex-m = "0.4.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.rubble-nrf5x]
git = "https://github.com/noloerino/rubble"
features = ["52832"]

# this lets you use `cargo fix`!
[[bin]]
name = "ddd"
test = false
bench = false

[profile.dev]
opt-level = "z"
[profile.dev.package."*"]
opt-level = "z"

[profile.release]
opt-level = "z" # Optimize for binary size
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
[profile.release.package."*"]
opt-level = "z"
